# CandleNet

./: .gitignore  .pre-commit-config.yaml  README.md  featureConfig.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test.ipynb
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  codeql.yml
CLI_tools/: logs_parser.py  partition_logs.py
CandleNet/: IndexContainer.py  TickerContainer.py  __init__.py  _config.py
CandleNet/Cache/: AbstractCache.py  IndexCache.py  __init__.py
CandleNet/DataAccess/: TickerAccessor.py  __init__.py  utils.py
CandleNet/autoreg/: __init__.py  lag_utils.py  lagged_tensor.py
CandleNet/autoreg/fastlag/: __init__.py  engine.py  select.py
CandleNet/cache/: __init__.py  base_cache.py  codec.py  p2_cache.py  synergy_cache.py  ticker_cache.py
CandleNet/embeddings/: embeddings.py
CandleNet/feature_gen/: feature_gen.py  sparse_format_tensors.py  ticker_id.py
CandleNet/logger/: __init__.py  logger.py  logger_types.py
CandleNet/scalers/: __init__.py  minmax.py  p2.py  robust.py  standard.py
CandleNet/sentiment/: __init__.py  sentiment.py
CandleNet/synergy_matrix/: __init__.py  synergy.py  synergy_cache.py
CandleNet/ticker/: ticker.py  ticker_data.py
CandleNet/utils/: __init__.py  global_helpers.py  package_getter.py
tests/: conftest.py  test_lags.py  test_logger.py  test_scalers.py  test_synergy.py  test_ticker.py  test_tickeraccessor.py  utils.py
