[project]
name = "CandleNet"
version = "0.1.0"
description = "Deep Learning library for forward looking automated technical analysis of stocks."
authors = [
    { name = "Güney Kıymaç", email = "guneykiymac@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "prometheus_client>=0.22.1",
    "python_json_logger>=3.3.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "yfinance>=0.2.65"
]

[build-system]
requires=[
    "poetry>=2.1.4",
    "poetry-core>=2.1.3"
]
build-backend = "poetry.core.masonry.api"